tests/ivg/invalid/duplicate_image_definition.ivg
format IVG-3
define image img [bounds 0,0,1,1]
define image img [bounds 0,0,1,1]
